--- a/doc/Manual.ipynb
+++ b/doc/Manual.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -34,9 +34,9 @@
     "\n",
     "Esta estructura salva datos en **nodos**, que son pares de claves (**keys**) y valores (**values**) y que tienen vínculos a otros nodos. Como cualquier árbol, debe tener un nodo raíz (**root**), que no tiene ningún padre (osea no está vinculado a ningún otro nodo), desde el cuál se puede acceder a todos los otros nodos.\n",
     "\n",
-    "Además, este tipo de árbol es **binario** así que cada nodo puede tener dos hijos como máximo. Si no tiene hijos en alguna de sus vacantes, a esta vacante la llamaremos hoja (**leaf**).\n",
+    "Además, este tipo de árbol es **binario**. Así que cada nodo puede tener dos hijos como máximo. Si no tiene hijos en alguna de sus vacantes, a esta vacante la llamaremos hoja (**leaf**).\n",
     "\n",
-    "El orden de los nodos se hace mediante las claves (keys). La convención es que un hijo izquierdo siempre es menor a su padre y uno derecho mayor."
+    "El orden de los nodos se hace mediante las claves (keys). La convención es que un hijo izquierdo siempre tiene una clave menor a la de su padre y uno derecho, mayor."
    ]
   },
   {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -68,7 +68,7 @@
        "LLRBTrees.LLRBTree{Int64,ASCIIString}\n"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -98,7 +98,7 @@
        "   a      \n"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -152,7 +152,7 @@
        "  b_r             \n"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -184,7 +184,7 @@
        "   b        c     \n"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -234,7 +234,7 @@
        "                                                                                                                           5_r    \n"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,12 +255,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Se necesitarían tantos pasos para llegar al último elemento como elementos tiene el árbol."
+    "Se necesitarían tantos pasos para llegar al último elemento como elementos tenga el árbol."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -269,7 +269,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.013643 seconds (13.04 k allocations: 532.936 KB)\n"
+      "  0.013639 seconds (13.04 k allocations: 531.998 KB)\n"
      ]
     },
     {
@@ -278,7 +278,7 @@
        "Nullable(5)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -316,7 +316,7 @@
        "   1       3                      \n"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -340,7 +340,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.000003 seconds (5 allocations: 192 bytes)\n"
+      "  0.000002 seconds (5 allocations: 192 bytes)\n"
      ]
     },
     {
@@ -349,7 +349,7 @@
        "Nullable(5)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,10 +359,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4-element Array{Any,1}:\n",
+       " [5,5]  \n",
+       " [6,6]  \n",
+       " [10,10]\n",
+       " [15,15]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "orderedpairs(arbol)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Aunque bueno la comparación en tiempos no es tan justa pues el `getindex` de los arboles pregunta por el elemento izquierdo primero y luego va al derecho."
+    "Hay que tomar en cuenta que esta comparación en tiempos no es tan justa pues el `getindex()` de los arboles pregunta por el elemento izquierdo primero y luego va al derecho."
    ]
   },
   {
@@ -383,14 +409,204 @@
     "Para mantener a los árboles balanceados se han diseñado muchos tipos de árboles auto-balanceados (*self-balancing trees*). Osea que, a medida que se le añaden o quitan elementos se ejecutan otras operaciones que aseguran una especie de balance.\n",
     "\n",
     "\n",
-    "El método que usamos nosotros es una mejora de los árboles rojo-negros (**red-black trees**) que fueron introducidos por **Guibas** y **Robert Sedgewick** hace 30 años."
+    "El método que usamos nosotros es una mejora de los árboles rojo-negros (**red-black trees** o **RBT**) que fueron introducidos por **Guibas** y **Robert Sedgewick** hace 30 años."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![2-3 vs BST](./23andBSTs.png)"
+    "Los RBT's son una representación binaria de árboles con nodos que pueden tener hasta 4 hijos (**2-3-4 Trees**). En nuestra implementación representamos a un vínculo rojo con el padre como un nodo rojo (al que se la añade \"_r\" en nuestra representación ASCII) y los nodos vinculados son parte de un gran nodo."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![2-3 vs BST](./23andBSTs.png)\n",
+    "***Fuente: Sedgewick, R. Left-leaning Red-Black Trees. p. 2***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "Estos nodos grandes se utilizan para no tener que aumentar o disminuir la altura de solo una rama del árbol cuando se añade o sustrae un nodo.\n",
+    "\n",
+    "Por eso, en nuestra implementación, siempre habrá el mismo número de saltos hacia nodos negros, cuando se va de la raíz a cualquier hoja.\n",
+    "\n",
+    "En esta implementación se siguen tres principios básicos que hacen que el código sea mas elegante:\n",
+    "\n",
+    "* Implementación recursiva\n",
+    "* Solo puede haber 3-nodos y el vínculo solo puede estar a la izquierda (por eso es **left-leaning**)\n",
+    "* Se hacen modificaciones al regresar de la recursión, por ej. se permiten 4-nodos que en el regreso se convierten en tres 2-nodos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Inserción"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Si el nodo final, donde insertamos un hijo, es un 2-nodo (osea tiene max. 2 hijos), lo convertimos en 3-nodo."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "              \n",
+       "       10      \n",
+       "    /       \\  \n",
+       "   5        15    \n"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arbol = LLRBTree(5,5)\n",
+    "push!(arbol, 10, 10)\n",
+    "push!(arbol, 15, 15)\n",
+    "arbol"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "                              \n",
+       "               10              \n",
+       "        /               \\      \n",
+       "       5                15     \n",
+       "   /                           \n",
+       "  4_r                             \n"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "push!(arbol,4,4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Y si el nodo final es un 3-nodo se puede hacer un rotación a la derecha del nodo padre"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "                              \n",
+       "               10              \n",
+       "       /                \\      \n",
+       "      4_r               15     \n",
+       "    /      \\                   \n",
+       "   3       5                      \n"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "push!(arbol,3,3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "O a la izquierda"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "              \n",
+       "       10      \n",
+       "    /       \\  \n",
+       "   5        15    \n"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arbol = LLRBTree(5,5)\n",
+    "push!(arbol, 10, 10)\n",
+    "push!(arbol, 15, 15)\n",
+    "arbol"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "                              \n",
+       "               10              \n",
+       "        /               \\      \n",
+       "       6                15     \n",
+       "   /                           \n",
+       "  5_r                             \n"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "push!(arbol, 6, 6)"
    ]
   },
   {
@@ -400,9 +616,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "path(\"./23andBSTs.png\")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
